docs: add build instructions and GUI screenshots
- Add detailed Build from Source section (prerequisites, steps, notes)
- Add 5-module table (including jcurl-plugin-api and jcurl-plugin-demo)
- Add screenshots section with Swing and JavaFX GUI images
- Fix plugin install path from ~/.api-client to ./.api-client
- Update project structure to include all 5 modules
- Update requirements section with build/runtime/plugin compilation details